Sorter openAPI med tags & litt beskrivelser
